<resources>
    <string name="app_name">PlatziConf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_logo">This is the app logo to splash</string>
    <string name="home_fragment_banner">This is the banner form home</string>

    <!-- schedule items -->
    <string name="schedule_hour_default_text">00:00</string>
    <string name="schedule_hour_type">A.M</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam consequatur cupiditate dignissimos dolor dolores est expedita, in iusto modi molestias, nemo, neque numquam pariatur veritatis? Doloremque excepturi facere itaque.</string>

    <!-- app texts content -->
    <string name="home_fragment_what_is_it">¿Qué es PlatziConf?</string>
    <string name="home_fragment_what_is_it_answer">Platzi una vez más, cómo todos los años, hace el evento más grande de comunidad tecnológica en los que apasionados por aprender, emprender e innovar se encuentran en un mismo lugar para escuchar a expertos de la industria que durante horas comparten su conocimiento.</string>
    <string name="home_fragment_why">¿Por qué asistir?</string>
    <string name="home_fragment_why_answer">Porque esto solo sucede una vez cada año.
Porque en America Latina la PlatziConf es el único evento de la industria tecnológica que reúne a profesionales de altísimo nivel en un solo lugar.
Porque en este evento conocerás personas que en el futuro pueden ser tus amigos, tus colegas, tus colaboradores y hasta tus socios.
Porque en esta versión todo girará al rededor de la pregunta: ¿Qué habilidades hacen a un gran profesional y lo preparan para los trabajos del futuro? y juntos responderemos lo que esto significa.</string>
    <string name="home_fragment_info">Información de la PlatziConf México 2019</string>
    <string name="home_fragment_info_answer">
        \u0009 &#8226; Es un evento exclusivo para estudiantes con suscripción activa en Platzi.\n
        \u0009 &#8226; (Sí esto te apasiona y no tienes una suscripción activa, adquiere ya mismo tu Plan Expert).\n
        \u0009 &#8226; Fecha: Sábado 3 de Agosto de 2019.\n
        \u0009 &#8226; Lugar: Centro Cultural Roberto Cantoral.\n
        \u0009 &#8226; Dirección: Puente Xoco s/n, Xoco, 03330 Ciudad de México, CDMX.</string>
</resources>
